--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.4",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
     "@types/react": "^19",
